# configured

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  README.md  configured_0.5.0_amd64.deb  vcpkg.json
.github/workflows/: build.yml
Configured/: CMakeLists.txt
Configured/src/: main.cpp
Configured/src/app/: MainWindow.cpp  MainWindow.hpp
Configured/src/ui/: BottomTextButton.cpp  BottomTextButton.hpp  ConnectWindow.cpp  ConnectWindow.hpp  ConnectionType.hpp  HomeScreenWidget.cpp  HomeScreenWidget.hpp
docs/: Doxyfile.in  Doxyfile.readthedocs  api.rst  conf.py  development.rst  index.rst  mainpage.dox  release.rst  requirements.txt  user-guide.rst
include/app/: AppLogger.hpp  GitWorkflowController.hpp  MainWindow.hpp  StatusBarController.hpp
include/core/: ConfiguredItem.hpp  ConfiguredItemTypes.hpp  ConfiguredProject.hpp  GitService.hpp  ProjectMetadata.hpp  ProjectMetadataService.hpp  ProjectService.hpp
include/core/git/: CloneWorker.hpp  GitPullWorker.hpp  GitPushWorker.hpp  GitService.hpp
include/core/validation/: IValidator.hpp  ValidationMessage.hpp  ValidationResult.hpp  ValidationSeverity.hpp
include/core/validation/item/: ItemValidationContext.hpp  ItemValidator.hpp  ItemValidators.hpp
include/core/validation/metadata/: ProjectMetadataValidator.hpp  ProjectMetadataValidators.hpp
include/core/validation/project/: ProjectValidator.hpp
include/export/: ExportParameter.hpp  JsonProjectExporter.hpp  RosYamlExporter.hpp  XmlProjectExporter.hpp
include/ui/: ConnectingDialog.hpp  EditorScreenWidget.hpp  GitConfigDialog.hpp  HelpScreenWidget.hpp  HomeScreenWidget.hpp  NewProjectGitWizard.hpp  ProjectMetadataDialog.hpp  PullPreflightDialog.hpp  PullingDialog.hpp  PushingDialog.hpp  RemoteConnectDialog.hpp
installer/: Bundle.wxs  Configured.Bundle.wixproj  Configured.Setup.wixproj  Package.wxs  build_bundle.ps1  build_msi.ps1
resources/: app.qrc
resources/help/: help.html
resources/linux/: configured.desktop
src/: main.cpp
src/app/: AppLogger.cpp  GitWorkflowController.cpp  MainWindow.cpp  StatusBarController.cpp
src/core/: CloneWorker.cpp  ConfiguredItem.cpp  ConfiguredItemTypes.cpp  ConfiguredProject.cpp  GitPullWorker.cpp  GitService.cpp  ProjectMetadataService.cpp  ProjectService.cpp
src/core/git/: CloneWorker.cpp  GitPullWorker.cpp  GitPushWorker.cpp  GitService.cpp
src/core/validation/: ValidationResult.cpp
src/core/validation/item/: ItemValidator.cpp  ItemValidators.cpp
src/core/validation/metadata/: ProjectMetadataValidator.cpp  ProjectMetadataValidators.cpp
src/core/validation/project/: ProjectValidator.cpp
src/export/: ExportFormat.hpp  ExportOptions.hpp  JsonProjectExporter.cpp  RosYamlExporter.cpp  XmlProjectExporter.cpp
src/ui/: ConnectingDialog.cpp  EditorScreenWidget.cpp  GitConfigDialog.cpp  HelpScreenWidget.cpp  HomeScreenWidget.cpp  NewProjectGitWizard.cpp  ProjectMetadataDialog.cpp  PullPreflightDialog.cpp  PullingDialog.cpp  PushingDialog.cpp  RemoteConnectDialog.cpp
tests/: CMakeLists.txt  test_configured_item.cpp  test_configured_item_types.cpp  test_configured_project.cpp  test_git_service.cpp  test_git_workflow_controller.cpp  test_main.cpp  test_project_metadata_validator.cpp  test_project_service.cpp  test_project_validator.cpp  test_ros_yaml_exporter.cpp  test_status_bar_controller.cpp  test_validation.cpp
